# Weather_Forecast_CPP

./: CMakeLists.txt  main.cpp
Domain/: BetterBox.cpp  BetterBox.h  Interval.cpp  Interval.h
Repository/: Repository.cpp  Repository.h
UI/: MainWindow.cpp  MainWindow.h
